# tom_rhymer

./: README.md  pyproject.toml  requirements.txt  setup.py
scripts/: crawl_word_stresses.py  crawl_word_urls.py  phonemize_words.py  requirements.txt  train_rhymer.py
tom_rhymer/: rhymer.py  tree.py
wiktionary_crawler/: crawl_word_stresses.py  crawl_word_urls.py  requirements.txt
