[project]
name = "tom_rhymer"
version = "1.1.0"
description = "Tom Rhymer"
readme = "README.md"
authors = [
    { name = "Alexey Karnachev", email = "alekseykarnachev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "more-itertools==10.5.0",
    "orjson==3.10.12",
    "pymorphy3==2.0.2",
    "russian-g2p",
    "tqdm==4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tom_rhymer"]

[tool.hatch.build]
only-packages = true
artifacts = ["tom_rhymer/data/**/*"]

[tool.uv.sources]
russian-g2p = { git = "https://github.com/nsu-ai/russian_g2p", rev = "2030552" }

